--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "build:css": "postcss src/tailwind.css -o dist/tailwind.css"
+    "build:css": "postcss src/tailwind.css -o static/dist/tailwind.css"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -22,7 +22,8 @@
     "@vue/cli-service": "~4.5.0",
     "autoprefixer": "^9.8.8",
     "node-sass": "^4.12.0",
-    "postcss": "^7.0.39",
+    "postcss": "^8.4.4",
+    "postcss-cli": "^9.0.2",
     "sass-loader": "^8.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue-template-compiler": "^2.6.11"
